Add recommended emualtors page

--- a/en/faq.html
+++ b/en/faq.html
@@ -27,10 +27,13 @@
 			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
 		</td>
 		<td valgin="middle">
+			<h5><a href="emulators.html" style="margin-left: 20px">Emulators</a></h5>
+		</td>
+		<td valgin="middle">
 			<h5><a href="faq.html" style="margin-left: 20px">FAQ</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="../zh/faq.html" style="margin-left: 100px">[中文]</a></h5>
+			<h5><a href="../zh/faq.html" style="margin-left: 20px">[中文]</a></h5>
 		</td>
 	</tr>
 	</table>            
