--- a/en/gamelist.html
+++ b/en/gamelist.html
@@ -27,10 +27,13 @@
 			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
 		</td>
 		<td valgin="middle">
+			<h5><a href="emulators.html" style="margin-left: 20px">Emulators</a></h5>
+		</td>
+		<td valgin="middle">
 			<h5><a href="faq.html" style="margin-left: 20px">FAQ</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="../zh/gamelist.html" style="margin-left: 100px">[中文]</a></h5>
+			<h5><a href="../zh/gamelist.html" style="margin-left: 20px">[中文]</a></h5>
 		</td>
 	</tr>
 	</table>            
@@ -41,6 +44,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+	<h4>Platform: Android</h4>
 	<h4>Latest version: 1.3.1</h4>
 
 	<h4><a href="../GameList1.3.1.apk">Download and install Emulator Game List</a></h4>
@@ -142,6 +146,8 @@
 	</ol>
 	<h4>So many steps! Could it be easier?</h4>
 	<p>Why not try <a href="romgripper.html">ROM Gripper</a>, with which one click to download.</p>
+	<h5>See also</h5>
+	<p><a href="emulators.html">Recommended Emulator Applications on Android</a></p>
 	<h5>Notes</h5>
 	<ul>
 		<li>If some ROMs can not be played or crash, that maybe the bugs of the emulator app not the bugs of ROM Gripper. Please contact the developer of your emulator app</li>
