--- a/zh/emulators.html
+++ b/zh/emulators.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-  <meta charset='utf-8' />
+	<meta charset='utf-8' />
 	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 	<meta name="description" content="Rom-gripper : ROM Gripper官方网站" />
 
 	<link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
 	<script language="javascript" src="../javascripts/googleAnalytics.js"></script>
 
-	<title>ROM Gripper Offcial Website</title>
+	<title>ROM Gripper官方网站</title>
 </head>
 
 <body>
@@ -17,28 +17,27 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-	<h1 id="project_title"><img src="../favicon.png" width="64" height="64" style="margin-right: 20px"/>ROM Gripper's Home</h1>
-
+	<h1 id="project_title"><img src="../favicon.png" width="64" height="64" style="margin-right: 20px"/>ROM Gripper官方网站</h1>
 	<table>
 	<tr>
 		<td valgin="middle">
 			<h5><a href="romgripper.html">ROM Gripper</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
+			<h5><a href="gamelist.html" style="margin-left: 15px">Emulator Game List</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="emulators.html" style="margin-left: 20px">Emulators</a></h5>
+			<h5><a href="emulators.html" style="margin-left: 15px">模拟器</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="faq.html" style="margin-left: 20px">FAQ</a></h5>
+			<h5><a href="faq.html" style="margin-left: 15px">疑问解答</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="../zh/emulators.html" style="margin-left: 20px">[中文]</a></h5>
+			<h5><a href="../en/emulators.html" style="margin-left: 15px">[English]</a></h5>
 		</td>
 	</tr>
 	</table>            
-	<h3 id="project_tagline">Recommended Emulator Applications on Android</h3>
+	<h3 id="project_tagline">安卓系统的推荐模拟器软件</h3>
         </header>
     </div>
 
@@ -119,7 +118,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-	<a href="mailto:romgripper@gmail.com">Contact us</a>
+	<a href="mailto:romgripper@gmail.com">联系我们</a>
       </footer>
     </div>
 </body>
