--- a/zh/faq.html
+++ b/zh/faq.html
@@ -24,13 +24,16 @@
 			<h5><a href="romgripper.html">ROM Gripper</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
+			<h5><a href="gamelist.html" style="margin-left: 15px">Emulator Game List</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
+			<h5><a href="emulators.html" style="margin-left: 15px">模拟器</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="../en/faq.html" style="margin-left: 60px">[English]</a></h5>
+			<h5><a href="faq.html" style="margin-left: 15px">疑问解答</a></h5>
+		</td>
+		<td valgin="middle">
+			<h5><a href="../en/faq.html" style="margin-left: 15px">[English]</a></h5>
 		</td>
 	</tr>
 	</table>            
