--- a/zh/gamelist.html
+++ b/zh/gamelist.html
@@ -24,13 +24,16 @@
 			<h5><a href="romgripper.html">ROM Gripper</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
+			<h5><a href="gamelist.html" style="margin-left: 15px">Emulator Game List</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
+			<h5><a href="emulators.html" style="margin-left: 15px">模拟器</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="../en/gamelist.html" style="margin-left: 60px">[English]</a></h5>
+			<h5><a href="faq.html" style="margin-left: 15px">疑问解答</a></h5>
+		</td>
+		<td valgin="middle">
+			<h5><a href="../en/gamelist.html" style="margin-left: 15px">[English]</a></h5>
 		</td>
 	</tr>
 	</table>            
@@ -41,6 +44,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+	<h4>操作系统：安卓(Android)</h4>
 	<h4>最新版本：1.3.1</h4>
 
 	<h4><a href="../GameList1.3.1.apk">下载安装Emulator Game List</a></h4>
@@ -134,6 +138,8 @@
 			</div>
 		</li>
 	</ol>
+	<h5>参考</h5>
+	<p><a href="emulators">安卓系统的推荐模拟器</a></p>
 	<h4>这也太复杂了吧？有没有简单点的？</h4>
 	<p><a href="romgripper.html">ROM Gripper (模拟器游戏ROM大合集)</a>，一键下载，专为懒人定制。</p>
       </section>
