--- a/zh/romgripper.html
+++ b/zh/romgripper.html
@@ -24,13 +24,16 @@
 			<h5><a href="romgripper.html">ROM Gripper</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
+			<h5><a href="gamelist.html" style="margin-left: 15px">Emulator Game List</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
+			<h5><a href="emulators.html" style="margin-left: 15px">模拟器</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="../en/romgripper.html" style="margin-left: 60px">[English]</a></h5>
+			<h5><a href="faq.html" style="margin-left: 15px">疑问解答</a></h5>
+		</td>
+		<td valgin="middle">
+			<h5><a href="../en/romgripper.html" style="margin-left: 15px">[English]</a></h5>
 		</td>
 	</tr>
 	</table>            
@@ -41,6 +44,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+	<h4>操作系统：安卓(Android)</h4>
 	<h4>最新版本：3.4</h4>
 
 	<h4><a href="../RomGripper3.4.apk">下载安装ROM Gripper</a></h4>
@@ -66,6 +70,8 @@
 		<li>点击Download按钮下载ROM文件</li>
 		<li>使用相应的模拟器APP打开ROM文件玩游戏</li>
 	</ol>
+	<h5>参考</h5>
+	<p><a href="emulators">安卓系统的推荐模拟器</a></p>
       </section>
     </div>
 
