--- a/en/romgripper.html
+++ b/en/romgripper.html
@@ -28,10 +28,13 @@
 			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
 		</td>
 		<td valgin="middle">
+			<h5><a href="emulators.html" style="margin-left: 20px">Emulators</a></h5>
+		</td>
+		<td valgin="middle">
 			<h5><a href="faq.html" style="margin-left: 20px">FAQ</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="../zh/romgripper.html" style="margin-left: 100px">[中文]</a></h5>
+			<h5><a href="../zh/romgripper.html" style="margin-left: 20px">[中文]</a></h5>
 		</td>
 	</tr>
 	</table>            
@@ -42,6 +45,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+	<h4>Platform: Android</h4>
 	<h4>Latest version: 3.4</h4>
 
 	<h4><a href="../RomGripper3.4.apk">Download and install ROM Gripper</a></h4>
@@ -74,6 +78,8 @@
 		<li>Click <b>Download</b> button</li>
 		<li>Open the downloaded ROM from an emulator app</li>
 	</ol>
+	<h5>See also</h5>
+	<p><a href="emulators.html">Recommended Emulator Applications on Android</a></p>
 	<h5>Notes</h5>
 	<ul>
 		<li>If some ROMs can not be played or crash, that maybe the bugs of the emulator app not the bugs of ROM Gripper. Please contact the developer of your emulator app</li>
