Change titles of emulators.html

--- a/en/emulators.html
+++ b/en/emulators.html
@@ -38,7 +38,7 @@
 		</td>
 	</tr>
 	</table>            
-	<h3 id="project_tagline">Recommended Emulator Applications on Android</h3>
+	<h3 id="project_tagline">Recommended Emulator Applications</h3>
         </header>
     </div>
 
