--- a/zh/emulators.html
+++ b/zh/emulators.html
@@ -37,7 +37,7 @@
 		</td>
 	</tr>
 	</table>            
-	<h3 id="project_tagline">安卓系统的推荐模拟器软件</h3>
+	<h3 id="project_tagline">推荐的模拟器软件</h3>
         </header>
     </div>
 
