Add two recommended emulators for SNES

--- a/zh/emulators.html
+++ b/zh/emulators.html
@@ -53,6 +53,8 @@
   	<ul>
 		<li><a href="https://play.google.com/store/apps/details?id=com.bubblezapgames.supergnes_lite" target="_blank">SuperGNES Lite</a></li>
 		<li><a href="https://play.google.com/store/apps/details?id=org.retroarch" target="_blank">RetroArch Android</a></li>
+		<li><a href="https://play.google.com/store/apps/details?id=com.explusalpha.Snes9xPlus" target="_blank">Snes9x EX+</a></li>
+		<li><a href="https://play.google.com/store/apps/details?id=ca.halsafar.snesdroid" target="_blank">SNESDroid</a></li>
 	</ul>
 	<h5>Nintendo 64</h5>
   	<ul>
