--- a/en/emulators.html
+++ b/en/emulators.html
@@ -115,6 +115,10 @@
 		<li><a href="https://play.google.com/store/apps/details?id=com.seleuco.mame4all" target="_blank">MAME4droid(0.37b5)</a></li>
 		<li><a href="https://play.google.com/store/apps/details?id=com.seleuco.mame4droid" target="_blank">MAME4droid Reloaded(0.139)</a></li>
 	</ul>
+	<h5>Commodore 64</h5>
+  	<ul>
+		<li><a href="https://play.google.com/store/apps/details?id=org.ab.c64" target="_blank">Frodo C64</a></li>
+	</ul>
       </section>
     </div>
 
