Update to Game List 2.0 Change the style sheet to make the content wider

--- a/en/gamelist.html
+++ b/en/gamelist.html
@@ -45,17 +45,14 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 	<h4>Platform: Android</h4>
-	<h4>Latest version: 1.3.1</h4>
+	<h4>Latest version: 2.0</h4>
 
-	<h4><a href="../GameList1.3.1.apk">Download and install Emulator Game List</a></h4>
+	<h4><a href="../GameList2.0.apk">Download and install Emulator Game List</a></h4>
 	<h5>Recent changes</h5>
 	<ul>
-		<li>Link to the new home page</li>
-		<li>Fix a crash bug</li>
-		<li>Fix crashing when search ROM file</li>
-		<li>Shortcut for searching emulator app in market</li>
-		<li>Using baidu.com to search when the system language is Chinese</li>
-		<li>Add Chinese support</li>
+		<li>Refine the game type order</li>
+		<li>ROM list auto update from server</li>
+		<li>Add Pokemon Creepy Black into GBC</li>
 	</ul>
 	<h5>Features</h5>
 	<ul>
