--- a/zh/gamelist.html
+++ b/zh/gamelist.html
@@ -45,9 +45,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 	<h4>操作系统：安卓(Android)</h4>
-	<h4>最新版本：1.3.1</h4>
+	<h4>最新版本：2.0</h4>
 
-	<h4><a href="../GameList1.3.1.apk">下载安装Emulator Game List</a></h4>
+	<h4><a href="../GameList2.0.apk">下载安装Emulator Game List</a></h4>
 	<h5>软件简介</h5>
 	<ul>
 		<li>最全的模拟器游戏列表</li>
@@ -55,10 +55,9 @@
 	</ul>
 	<h5>更新内容</h5>
 	<ul>
-		<li>加入中文支持</li>
-		<li>使用百度搜索游戏</li>
-		<li>应用商店快捷搜索模拟器软件</li>
-		<li>修复一个软件崩溃的问题</li>
+		<li>优化模拟器顺序</li>
+		<li>游戏列表自动更新</li>
+		<li>增加GBC游戏Pokemon Creepy Black</li>
 	</ul>
 	<h5>应用截屏</h5>
 	<a href="../images/gamelist/screenshots/screenshot1.png"><img src="../images/gamelist/screenshots/screenshot1.png" width="138" height="230"/></a>
