Add "Know issues" to ROM Gripper

--- a/en/romgripper.html
+++ b/en/romgripper.html
@@ -49,6 +49,10 @@
 	<h4>Latest version: 3.5</h4>
 
 	<h4><a href="../RomGripper3.5.apk">Download and install ROM Gripper</a></h4>
+	<h5>Known issues (will be fixed)</h5>
+	<ul>
+		<li>User is asked to upgrade even if there is not new version</li>
+	</ul>
 	<h5>Recent changes</h5>
 	<ul>
 		<li>Refine the game type order</li>
