--- a/zh/romgripper.html
+++ b/zh/romgripper.html
@@ -54,6 +54,10 @@
 		<li>提供成千上万ROM免费下载</li>
 		<li>简单实用</li>
 	</ul>
+	<h5>已知问题</h5>
+	<ul>
+		<li>在没有更新的情况下用户仍然被要求更新</li>
+	</ul>
 	<h5>更新内容</h5>
 	<ul>
 		<li>优化模拟器顺序</li>
