--- a/zh/gamelist.html
+++ b/zh/gamelist.html
@@ -45,9 +45,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 	<h4>操作系统：安卓(Android)</h4>
-	<h4>最新版本：2.0</h4>
+	<h4>最新版本：2.0.2</h4>
 
-	<h4><a href="../GameList2.0.apk">下载安装Emulator Game List</a></h4>
+	<h4><a href="../GameList2.0.2.apk">下载安装Emulator Game List</a></h4>
 	<h5>软件简介</h5>
 	<ul>
 		<li>最全的模拟器游戏列表</li>
@@ -55,9 +55,9 @@
 	</ul>
 	<h5>更新内容</h5>
 	<ul>
-		<li>优化模拟器顺序</li>
-		<li>游戏列表自动更新</li>
-		<li>增加GBC游戏Pokemon Creepy Black</li>
+		<li>修改布局</li>
+		<li>修复加载ROM列表时崩溃的bug</li>
+		<li>去处Mobclix广告及其所需的权限</li>
 	</ul>
 	<h5>应用截屏</h5>
 	<a href="../images/gamelist/screenshots/screenshot1.png"><img src="../images/gamelist/screenshots/screenshot1.png" width="138" height="230"/></a>
