--- a/en/romgripper.html
+++ b/en/romgripper.html
@@ -46,20 +46,13 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 	<h4>Platform: Android</h4>
-	<h4>Latest version: 3.5</h4>
+	<h4>Latest version: 3.5.1</h4>
 
-	<h4><a href="../RomGripper3.5.apk">Download and install ROM Gripper</a></h4>
-	<h5>Known issues (will be fixed)</h5>
-	<ul>
-		<li>User is asked to upgrade even if there is not new version</li>
-	</ul>
+	<h4><a href="../RomGripper3.5.1.apk">Download and install ROM Gripper</a></h4>
 	<h5>Recent changes</h5>
 	<ul>
-		<li>Refine the game type order</li>
-		<li>ROM list auto update from server</li>
-		<li>Add home page link</li>
-		<li>Add Share button</li>
-		<li>Easy to look for emulator app</li>
+		<li>Fix that user is always asked to upgrade</li>
+		<li>Add "Manual search" button</li>
 	</ul>
 	<h5>Features</h5>
 	<ul>
