--- a/zh/gamelist.html
+++ b/zh/gamelist.html
@@ -45,13 +45,13 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 	<h4>操作系统：安卓(Android)</h4>
-	<h4>最新版本：2.0.2</h4>
+	<h4>最新版本：2.1</h4>
 
-	<h4><a href="../GameList2.0.2.apk">下载安装Emulator Game List</a></h4>
+	<h4><a href="../GameList2.1.apk">下载安装Emulator Game List</a></h4>
 	<h5>软件简介</h5>
 	<ul>
-		<li>最全的模拟器游戏列表</li>
-		<li>虽无法直接下载游戏，但通过百度搜索引擎搜索游戏，用户自主选择下载</li>
+		<li>增加了PC Engine - TurboGrafx16游戏列表</li>
+		<li>优化了GameCube列表，并能显示其游戏截屏</li>
 	</ul>
 	<h5>更新内容</h5>
 	<ul>
