--- a/en/gamelist.html
+++ b/en/gamelist.html
@@ -45,14 +45,13 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 	<h4>Platform: Android</h4>
-	<h4>Latest version: 2.0.2</h4>
+	<h4>Latest version: 2.1</h4>
 
-	<h4><a href="../GameList2.0.2.apk">Download and install Emulator Game List</a></h4>
+	<h4><a href="../GameList2.1.apk">Download and install Emulator Game List</a></h4>
 	<h5>Recent changes</h5>
 	<ul>
-		<li>Remove Mobclix ads and its permission</li>
-		<li>Fix a crash bug when loading ROM list</li>
-		<li>Change layout</li>
+		<li>Add PC Engine - TurboGrafx16 games</li>
+		<li>Refine the list of GameCube and show screenshots</li>
 	</ul>
 	<h5>Features</h5>
 	<ul>
