--- a/en/romgripper.html
+++ b/en/romgripper.html
@@ -46,13 +46,12 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 	<h4>Platform: Android</h4>
-	<h4>Latest version: 3.5.1</h4>
+	<h4>Latest version: 3.6</h4>
 
-	<h4><a href="../RomGripper3.5.1.apk">Download and install ROM Gripper</a></h4>
+	<h4><a href="../RomGripper3.6.apk">Download and install ROM Gripper</a></h4>
 	<h5>Recent changes</h5>
 	<ul>
-		<li>Fix that user is always asked to upgrade</li>
-		<li>Add "Manual search" button</li>
+		<li>Add GameCube games</li>
 	</ul>
 	<h5>Features</h5>
 	<ul>
