--- a/zh/romgripper.html
+++ b/zh/romgripper.html
@@ -45,9 +45,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 	<h4>操作系统：安卓(Android)</h4>
-	<h4>最新版本：3.5.1</h4>
+	<h4>最新版本：3.6</h4>
 
-	<h4><a href="../RomGripper3.5.1.apk">下载安装ROM Gripper</a></h4>
+	<h4><a href="../RomGripper3.6.apk">下载安装ROM Gripper</a></h4>
 	<h5>软件简介</h5>
 	<ul>
 		<li>寻找童年时代游戏</li>
@@ -56,8 +56,7 @@
 	</ul>
 	<h5>更新内容</h5>
 	<ul>
-		<li>修复了用户总被提示更新的bug</li>
-		<li>增加“手动搜索“按钮</li>
+		<li>增加GameCube游戏</li>
 	</ul>
 	<h5>应用截屏</h5>
 	<a href="../images/romgripper/screenshots/emulator_list.jpg"><img src="../images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/></a>
