--- a/en/romgripper.html
+++ b/en/romgripper.html
@@ -37,6 +37,11 @@
 			<h3><a href="../zh/romgripper.html" style="margin-left: 20px">[中文]</a></h3>
 		</td>
 	</tr>
+	<tr>
+		<td colspan="3" valgin="middle">
+			<h3><a href="api.html">Open API for Emulator Developer</a></h3>
+		</td>
+	</tr>
 	</table>            
 	<h3 id="project_tagline">ROM Gripper</h3>
         </header>
