--- a/en/gamelist.html
+++ b/en/gamelist.html
@@ -36,6 +36,11 @@
 			<h3><a href="../zh/gamelist.html" style="margin-left: 20px">[中文]</a></h3>
 		</td>
 	</tr>
+	<tr>
+		<td colspan="3" valgin="middle">
+			<h3><a href="api.html">Open API for Emulator Developer</a></h3>
+		</td>
+	</tr>
 	</table>            
 	<h3 id="project_tagline">Emulator Game List</h3>
         </header>
