Tell user i can do nothing to coolrom.com`

--- a/en/faq.html
+++ b/en/faq.html
@@ -59,6 +59,8 @@
 	<p>Certain emulators run certain ROMs better, depending on their compatibility, so try running the ROM with different emulators. If the ROM still doesn't work, it's most likely that it's corrupt (not playable).</p>
 	<h5>What do I need to play these games?</h5>
 	<p>ROM files(always in the format of *.zip or *.iso) and an emulator application that can run that type of ROM.</p>
+	<h5>Could you add a ROM on coolrom.com?</h5>
+	<p>Sorry, I cannot. That website is a third-party site. I cannot do anything to it. What I can do is to add a game in my game list and help you search it on Internet. Maybe you can find it on another site.</p>
       </section>
     </div>
 
