--- a/en/romgripper.html
+++ b/en/romgripper.html
@@ -85,9 +85,10 @@
 	</ol>
 	<h5>See also</h5>
 	<p><a href="emulators.html">Recommended Emulator Applications on Android</a></p>
-	<h5>Notes</h5>
+	<h5>Notice</h5>
 	<ul>
-		<li>If some ROMs can not be played or crash, that maybe the bugs of the emulator app not the bugs of ROM Gripper. Please contact the developer of your emulator app</li>
+		<li>If some ROMs can not be played or crash, that may be a bug of the emulator app and not a bug of ROM Gripper. Please contact the developer of your emulator app</li>
+		<li>Because coolrom.com is not owned and maintained by me, I cannot add a ROM on it.</li>
 		<li><font color="red">For legal reasons, please ensure that you own the physical game that you are downloading the ROM for.</font></li>
 	</ul>
       </section>
