--- a/en/gamelist.html
+++ b/en/gamelist.html
@@ -50,13 +50,16 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 	<h4>Platform: Android</h4>
-	<h4>Latest version: 2.1</h4>
+	<h4>Latest version: 2.2.1</h4>
 
-	<h4><a href="../GameList2.1.apk">Download and install Emulator Game List</a></h4>
+	<h4><a href="../GameList2.2.1.apk">Download and install Emulator Game List</a></h4>
 	<h5>Recent changes</h5>
 	<ul>
-		<li>Add PC Engine - TurboGrafx16 games</li>
-		<li>Refine the list of GameCube and show screenshots</li>
+		<li>Support game list manual update</li>
+		<li>"I love this game" share</li>
+		<li>Fix 404 error by cache screenshots on external storage</li>
+		<li>Show game details game faster</li>
+		<li>Not support DroidEmuLite any more</li>
 	</ul>
 	<h5>Features</h5>
 	<ul>
