--- a/zh/gamelist.html
+++ b/zh/gamelist.html
@@ -45,13 +45,16 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 	<h4>操作系统：安卓(Android)</h4>
-	<h4>最新版本：2.1</h4>
+	<h4>最新版本：2.2.1</h4>
 
-	<h4><a href="../GameList2.1.apk">下载安装Emulator Game List</a></h4>
+	<h4><a href="../GameList2.2.1.apk">下载安装Emulator Game List</a></h4>
 	<h5>软件简介</h5>
 	<ul>
-		<li>增加了PC Engine - TurboGrafx16游戏列表</li>
-		<li>优化了GameCube列表，并能显示其游戏截屏</li>
+		<li>支持手动更新游戏列表</li>
+		<li>增加“喜欢这个游戏”按钮</li>
+		<li>通过缓存截屏到SD卡修复404错误</li>
+		<li>使进入游戏详细信息界面速度更快</li>
+		<li>不再支持DroidEmuLite</li>
 	</ul>
 	<h5>更新内容</h5>
 	<ul>
