--- a/en/romgripper.html
+++ b/en/romgripper.html
@@ -51,17 +51,12 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 	<h4>Platform: Android</h4>
-	<h4>Latest version: 3.7</h4>
+	<h4>Latest version: 3.7.1</h4>
 
-	<h4><a href="../RomGripper3.7.apk">Download and install ROM Gripper</a></h4>
+	<h4><a href="../RomGripper3.7.1.apk">Download and install ROM Gripper</a></h4>
 	<h5>Recent changes</h5>
 	<ul>
-		<li>Support game list manual update</li>
-		<li>"I love this game" share</li>
-		<li>Fix 404 error</li>
-		<li>Show game details game faster</li>
-		<li>Not support DroidEmuLite any more</li>
-		<li>Fix that some game cannot be downloaded</li>
+		<li>Fix that ROM title doesn't shown</li>
 	</ul>
 	<h5>Features</h5>
 	<ul>
