--- a/zh/romgripper.html
+++ b/zh/romgripper.html
@@ -45,9 +45,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 	<h4>操作系统：安卓(Android)</h4>
-	<h4>最新版本：3.7</h4>
+	<h4>最新版本：3.7.1</h4>
 
-	<h4><a href="../RomGripper3.7.apk">下载安装ROM Gripper</a></h4>
+	<h4><a href="../RomGripper3.7.1.apk">下载安装ROM Gripper</a></h4>
 	<h5>软件简介</h5>
 	<ul>
 		<li>寻找童年时代游戏</li>
@@ -56,12 +56,7 @@
 	</ul>
 	<h5>更新内容</h5>
 	<ul>
-		<li>支持手动更新游戏列表</li>
-		<li>增加“喜欢这个游戏”按钮</li>
-		<li>通过缓存截屏到SD卡修复404错误</li>
-		<li>使进入游戏详细信息界面速度更快</li>
-		<li>不再支持DroidEmuLite</li>
-		<li>修复了一些游戏不能下载的问题</li>
+		<li>修复游戏名不能显示的问题</li>
 	</ul>
 	<h5>应用截屏</h5>
 	<a href="../images/romgripper/screenshots/emulator_list.jpg"><img src="../images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/></a>
