--- a/en/emulators.html
+++ b/en/emulators.html
@@ -22,10 +22,7 @@
 	<table>
 	<tr>
 		<td valgin="middle">
-			<h3><a href="romgripper.html">ROM Gripper</a></h3>
-		</td>
-		<td valgin="middle">
-			<h3><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h3>
+			<h3><a href="gamelist.html">Emulator Game List</a></h3>
 		</td>
 		<td valgin="middle">
 			<h3><a href="emulators.html" style="margin-left: 20px">Emulators</a></h3>
