--- a/zh/gamelist.html
+++ b/zh/gamelist.html
@@ -21,10 +21,7 @@
 	<table>
 	<tr>
 		<td valgin="middle">
-			<h3><a href="romgripper.html">ROM Gripper</a></h3>
-		</td>
-		<td valgin="middle">
-			<h3><a href="gamelist.html" style="margin-left: 15px">Emulator Game List</a></h3>
+			<h3><a href="gamelist.html">Emulator Game List</a></h3>
 		</td>
 		<td valgin="middle">
 			<h3><a href="emulators.html" style="margin-left: 15px">模拟器</a></h3>
