Remove what may violate copyright

--- a/en/gamelist.html
+++ b/en/gamelist.html
@@ -78,7 +78,7 @@
 	<h5>Steps</h5>
 	<ol>
 		<li>
-			Select a game type
+			Select a game system 
 			<div style="display:block;text-align:left;margin-left:15px">
 				<a href="../images/gamelist/guide/select-emulator.png"><img src="../images/gamelist/guide/select-emulator.png" width="207" height="345"/></a>
 				<br/>The game list of this game type will shown.
@@ -93,18 +93,9 @@
 			</div>
 		</li>
 		<li>
-			Copy ROM file name
-			<div style="display:block;text-align:left;margin-left:15px">
-				<a href="../images/gamelist/guide/copy-filename.png"><img src="../images/gamelist/guide/copy-filename.png" width="207" height="345"/></a>
-				<br/>The standard ROM file name is copied to the system clipboard. If you don't use this name when you download, the Play button above will not be enabled.
-			</div>
-		</li>
-		<li>
 			Search on Internet
 			<div style="display:block;text-align:left;margin-left:15px">
 				<a href="../images/gamelist/guide/search.png"><img src="../images/gamelist/guide/search.png" width="207" height="345"/></a>
-				<br/>It is recommended to use Dolphin Browser.<br/>
-				<a href="../images/gamelist/guide/select-dolphin.png"><img src="../images/gamelist/guide/select-dolphin.png" width="207" height="345"/></a>
 			</div>
 		</li>
 		<li>
@@ -115,15 +106,11 @@
 			</div>
 		</li>
 		<li>
-			Download
+			Download<br/>
 			<div style="display:block;text-align:left;margin-left:15px">
+				<font color="red">For legal reasons, please ensure that you own the physical game that you are downloading the ROM for.</font><br/>
 				Click the <b>"Download Now"</b> button to download<br/>
 				<a href="../images/gamelist/guide/click-download.png"><img src="../images/gamelist/guide/click-download.png" width="207" height="345"/></a>
-				<br/>Paste the ROM file name.<br/>
-				<a href="../images/gamelist/guide/paste.png"><img src="../images/gamelist/guide/paste.png" width="207" height="345"/></a>
-				<br/>Change the save path to the one shown in Step 3 on details page. If it doesn't exist, create it.<br/>
-				<a href="../images/gamelist/guide/save-path.png"><img src="../images/gamelist/guide/save-path.png" width="207" height="345"/></a>
-				<br/>Click the "Save" button to download the ROM.<br/>
 			</div>
 		</li>
 		<li>
@@ -140,20 +127,19 @@
 		<li>
 			Enjoy it and bring back your childhood
 			<div style="display:block;text-align:left;margin-left:15px">
-				Open the ROM file downloaded to play the game<br/>
+				Play the game with your emulator app.<br/>
 				<a href="../images/gamelist/guide/play-in-emulator.png"><img src="../images/gamelist/guide/play-in-emulator.png" width="207" height="345"/></a>
 			</div>
 		</li>
 	</ol>
-	<h4>So many steps! Could it be easier?</h4>
-	<p>Why not try <a href="romgripper.html">ROM Gripper</a>, with which one click to download.</p>
 	<h5>See also</h5>
 	<p><a href="emulators.html">Recommended Emulator Applications on Android</a></p>
 	<h5>Notice</h5>
 	<ul>
-		<li>If some ROMs can not be played or crash, that may be a bug of the emulator app and not a bug of ROM Gripper. Please contact the developer of your emulator app</li>
-		<li>Because coolrom.com is not owned and maintained by me, I cannot do anything to it. What I can do is to add a game in my game list and help you search it on Internet. Maybe you can find it on another site.</li>
 		<li><font color="red">For legal reasons, please ensure that you own the physical game that you are downloading the ROM for.</font></li>
+		<li>If some ROMs can not be played or crash, that may be a bug of the emulator app and not a bug of ROM Gripper. Please contact the developer of your emulator app</li>
+		<li>This app doesn't provide any ROM files. The only thing it provide is a short way to search a game with google</li>
+		<li>Because coolrom.com is not owned and maintained by me, I cannot do anything to it. What I can do is to add a game in my game list and help you search it on Internet. Maybe you can find it on another site.</li>
 	</ul>
       </section>
     </div>
