--- a/zh/gamelist.html
+++ b/zh/gamelist.html
@@ -86,18 +86,9 @@
 			</div>
 		</li>
 		<li>
-			复制ROM文件名
-			<div style="display:block;text-align:left;margin-left:15px">
-				<a href="../images/gamelist/guide/copy-filename.png"><img src="../images/gamelist/guide/copy-filename.png" width="207" height="345"/></a>
-				<br/>默认ROM文件名将被复制到系统剪切板，推荐使用默认ROM文件名保存ROM文件
-			</div>
-		</li>
-		<li>
-			搜索ROM文件
+			搜索游戏信息
 			<div style="display:block;text-align:left;margin-left:15px">
 				<a href="../images/gamelist/guide/search.png"><img src="../images/gamelist/guide/search.png" width="207" height="345"/></a>
-				<br/>推荐使用海豚浏览器打开<br/>
-				<a href="../images/gamelist/guide/select-dolphin.png"><img src="../images/gamelist/guide/select-dolphin.png" width="207" height="345"/></a>
 			</div>
 		</li>
 		<li>
@@ -110,12 +101,9 @@
 		<li>
 			下载
 			<div style="display:block;text-align:left;margin-left:15px">
+				<font color="red">下载前请确保您实际拥有此游戏，此应用对违反此条产生的后果不负任何责任</font><br/>
 				点击<b>Download Now</b>下载<br/>
 				<a href="../images/gamelist/guide/click-download.png"><img src="../images/gamelist/guide/click-download.png" width="207" height="345"/></a>
-				<br/>粘贴ROM文件名<br/>
-				<a href="../images/gamelist/guide/paste.png"><img src="../images/gamelist/guide/paste.png" width="207" height="345"/></a>
-				<br/>把保存路径改成第三步中的文件夹，如果该文件夹不存在，创建它<br/>
-				<a href="../images/gamelist/guide/save-path.png"><img src="../images/gamelist/guide/save-path.png" width="207" height="345"/></a>
 			</div>
 		</li>
 		<li>
@@ -139,8 +127,6 @@
 	</ol>
 	<h5>参考</h5>
 	<p><a href="emulators">安卓系统的推荐模拟器</a></p>
-	<h4>这也太复杂了吧？有没有简单点的？</h4>
-	<p><a href="romgripper.html">ROM Gripper (模拟器游戏ROM大合集)</a>，一键下载，专为懒人定制。</p>
       </section>
     </div>
 
