Remove ROM Gripper in api.hmtl

--- a/en/api.html
+++ b/en/api.html
@@ -296,7 +296,7 @@
 	</tr>
 	</table>
 	</div>
-	<h4>ROM types that ROM Gripper supports</h4>
+	<!--h4>ROM types that ROM Gripper supports</h4>
 	<div style="padding: 0px 30px">
 	<table style="border: 1">
 	<tr>
@@ -524,7 +524,7 @@
 		</td>
 	</tr>
 	</table>
-	</div>
+	</div-->
       </section>
     </div>
 
