--- a/en/gamelist.html
+++ b/en/gamelist.html
@@ -46,7 +46,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-	<h4>Platform: Android</h4>
+	<!--h4>Platform: Android</h4>
 	<h4>Latest version: 2.2.1</h4>
 
 	<h4><a href="../GameList2.2.1.apk">Download and install Emulator Game List</a></h4>
@@ -74,7 +74,7 @@
 	<a href="../images/gamelist/screenshots/screenshot4.png"><img src="../images/gamelist/screenshots/screenshot4.png" width="138" height="230"/></a>
 	<a href="../images/gamelist/screenshots/screenshot5.png"><img src="../images/gamelist/screenshots/screenshot5.png" width="138" height="230"/></a>
 	<a href="../images/gamelist/screenshots/screenshot6.png"><img src="../images/gamelist/screenshots/screenshot6.png" width="138" height="230"/></a>
-	<a href="../images/gamelist/screenshots/screenshot7.png"><img src="../images/gamelist/screenshots/screenshot7.png" width="230" height="138"/></a>
+	<a href="../images/gamelist/screenshots/screenshot7.png"><img src="../images/gamelist/screenshots/screenshot7.png" width="230" height="138"/></a-->
 	<h5>Steps</h5>
 	<ol>
 		<li>
