--- a/zh/gamelist.html
+++ b/zh/gamelist.html
@@ -41,7 +41,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-	<h4>操作系统：安卓(Android)</h4>
+	<!--h4>操作系统：安卓(Android)</h4>
 	<h4>最新版本：2.2.1</h4>
 
 	<h4><a href="../GameList2.2.1.apk">下载安装Emulator Game List</a></h4>
@@ -66,7 +66,7 @@
 	<a href="../images/gamelist/screenshots/screenshot4.png"><img src="../images/gamelist/screenshots/screenshot4.png" width="138" height="230"/></a>
 	<a href="../images/gamelist/screenshots/screenshot5.png"><img src="../images/gamelist/screenshots/screenshot5.png" width="138" height="230"/></a>
 	<a href="../images/gamelist/screenshots/screenshot6.png"><img src="../images/gamelist/screenshots/screenshot6.png" width="138" height="230"/></a>
-	<a href="../images/gamelist/screenshots/screenshot7.png"><img src="../images/gamelist/screenshots/screenshot7.png" width="230" height="138"/></a>
+	<a href="../images/gamelist/screenshots/screenshot7.png"><img src="../images/gamelist/screenshots/screenshot7.png" width="230" height="138"/></a-->
 	<h5>使用方法</h5>
 	<ol>
 		<li>打开此APP</li>
